<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/school"
    android:fitsSystemWindows="true"
    card_view:cardBackgroundColor="@android:color/transparent"
    tools:context="com.prep.ardenne.ardenneprep.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220sp"
        android:layout_height="220sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        card_view:srcCompat="@drawable/ardene" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="375dip"
            android:background="@color/cardview_dark_background"
            android:backgroundTint="@color/cardview_dark_background"
            app:cardElevation="10dp">

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/mybuttonhome"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3">

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10sp"
                                android:layout_marginRight="10sp"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@android:color/white"
                                android:textColorLink="@color/colorPrimary"
                                android:textSize="14sp" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5sp"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="10sp"
                                android:layout_marginRight="10sp"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHighlight="@color/cardview_light_background"
                                android:textColorHint="@android:color/white"
                                android:textColorLink="@color/cardview_light_background"
                                android:textSize="14sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="10dip"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="150dp"
                            android:layout_height="45dip"
                            android:background="@drawable/mybutton"
                            android:text="@string/btn_login"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="15dip"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btn_signup"
                            android:layout_width="150dp"
                            android:layout_height="45dip"
                            android:background="@drawable/mybutton"
                            android:text="@string/btn_link_to_register"
                            android:textAllCaps="false"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="10dip"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_reset_password"
                            android:layout_width="match_parent"
                            android:layout_height="34dp"
                            android:layout_marginBottom="5sp"
                            android:layout_marginTop="5sp"
                            android:layout_weight="1.5"
                            android:background="@null"
                            android:text="@string/btn_forgot_password"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorLink="@color/background"
                            android:textSize="13sp" />

                        <Space
                            android:layout_width="2sp"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btn_new_user"
                            android:layout_width="match_parent"
                            android:layout_height="34dp"
                            android:layout_marginBottom="5sp"
                            android:layout_marginTop="5sp"
                            android:layout_weight="1.5"
                            android:background="@null"
                            android:text="@string/btn_new_user"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorLink="@color/background"
                            android:textSize="13sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Login Button -->

        <!-- Link to Login Screen -->

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
